fixing form height flickering

--- a/src/lwc/rd2EntryForm/rd2EntryForm.css
+++ b/src/lwc/rd2EntryForm/rd2EntryForm.css
@@ -14,8 +14,8 @@
 }
 
 .slds-modal__content {
-    height: auto !important;
-    max-height: 60vh !important;
+    height: auto;
+    max-height: 60vh;
 }
 
 .slds-modal {
